Add rate-limiter for statement networking (#11051)
# Description

Adds a rate limiter for the statement networking protocol to prevent
peers from bypassing the known-statements LRU cache by continuously
sending valid statements, which would hit the slower statement-store
index.

Fixes https://github.com/paritytech/polkadot-sdk/issues/10889


## Integration

The StatementHandlerPrototype::build method now accepts an optional
statements_per_second parameter. If not provided, it defaults to 50,000
statements/second. Downstream projects can tune this value based on
their expected workload.

---------

Co-authored-by: cmd[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/substrate/client/network/statement/Cargo.toml
+++ b/substrate/client/network/statement/Cargo.toml
@@ -23,6 +23,7 @@ array-bytes = { workspace = true, default-features = true }
 async-channel = { workspace = true }
 codec = { features = ["derive"], workspace = true, default-features = true }
 futures = { workspace = true }
+governor = { workspace = true }
 log = { workspace = true, default-features = true }
 prometheus-endpoint = { workspace = true, default-features = true }
 sc-network = { workspace = true, default-features = true }
