Fix coretime partioning + super low latency on-demand (#10184)
## Description

Fixes how we build the claim queue for core assignments. Previously we
statically pre-populated it by popping from assignment providers, which
was broken because we weren't advancing blocks correctly. If a new
assignment came in upcoming blocks, we'd miss it.

Now we build the claim queue on-the-fly by simulating block advancement
with the correct block numbers. This fixes the coretime partitioning
issue and simplifies session handling - no need to push anything back to
assignment providers anymore.

**Bonus**: On-demand orders are now instant. They show up in the claim
queue in the same block the order is placed.

## Changes

- Moved coretime assigner logic from separate pallet into scheduler
- Migrated on-demand pallet v1 → v2 (single queue instead of affinity
queues, this allows us to pop all on-demand cores of a block at once -
which makes affinity redundant, as we can now sensure that a particular
paraid is unique per height)
- Scheduler migration v3 → v4 (removes claim queue storage)
- Removed obsolete `assigner_coretime` pallet
- Updated on-demand benchmarks (removed linear `s` parameter)

## Breaking Changes

- `assigner_coretime` pallet → `scheduler::assigner_coretime` module
- On-demand storage structure changed (migration handles it)
- Scheduler storage now v4

TODOS:

- [x] Make it typecheck
- [x] Make CoreState one state item for all cores
- [x] Runtime APIs must look into the future (retrieve claim queue for
now +1)
- [x] Update scheduler + paras_inherent to use the new pop all cores at
once API
- [x] Fix scheduler and paras_inherent to use the new API
- [x] Add back duplication of first assignment for on-demand
- [x] Limit assignments returned by the scheduler to availability cores
count
- [x] Fix peek for on-demand
- [x] Fix benchmarks
- [x] Migrations
- [x] Add test that peek at block x correctly predicts pops at block x +
n
- [x] Add test that on-demand order on empty co

--- a/.github/zombienet-tests/zombienet_polkadot_tests.yml
+++ b/.github/zombienet-tests/zombienet_polkadot_tests.yml
@@ -258,3 +258,7 @@
   runner-type: "default"
   use-zombienet-sdk: true
 
+- job-name: "zombienet-polkadot-coretime-partitioning"
+  test-filter: "functional::coretime_partitioning::coretime_assignment_boundary_test"
+  runner-type: "default"
+  use-zombienet-sdk: true
