--- a/.github/zombienet-tests/zombienet_cumulus_tests.yml
+++ b/.github/zombienet-tests/zombienet_cumulus_tests.yml
@@ -82,7 +82,7 @@
   needs-wasm-binary: true
 
 - job-name: "zombienet-cumulus-0015-parachain-runtime-upgrade"
-  test-filter: "functional::parachain_runtime_upgrade::parachain_runtime_upgrade_test"
+  test-filter: "zombie_ci::parachain_runtime_upgrade_slot_duration_18s::parachain_runtime_upgrade_slot_duration_18s"
   runner-type: "default"
   cumulus-image: "test-parachain"
   use-zombienet-sdk: true
